fix battery overlapping with day

--- a/src/SDK-4.x/resources/styles.css
+++ b/src/SDK-4.x/resources/styles.css
@@ -131,7 +131,7 @@
 }
 
 #hr {
-  x: 3%;
+  x: 5;
   y: 30;    
 }
 
@@ -212,8 +212,8 @@
 }
 
 #calendar {
-  x: 100%-3%;
-  y: 45;
+  x: 100%-5;
+  y: 55;
 }
 
 #day {
